# commandspec

./: Cargo.toml  README.md  bors.toml
src/: lib.rs  macros.rs  signal.rs
tests/: all.rs
