[package]
authors = ["Tim Ryan <tim@timryan.org>"]
description = "Simple Rust macro for building `std::process::Command` objects. Uses macro_rules! and works on stable."
license = "MIT OR Apache-2.0"
name = "commandspec"
repository = "http://github.com/tcr/commandspec"
version = "0.6.0"
[dependencies]
failure = "0.1.1"
shlex = "0.1.1"
